UCL-563 fix spacing issue when errors are present

--- a/src/components/DataGrid/DataGridFilters/DateTimePicker/DateTimePicker.module.scss
+++ b/src/components/DataGrid/DataGridFilters/DateTimePicker/DateTimePicker.module.scss
@@ -61,6 +61,10 @@
     flex-grow: 1;
 
     padding: 2rem 2rem 0 2rem;
+
+    &.has-error {
+      gap: calc(2rem - 15.5681px);
+    }
   }
 
   .controls-panel {
